# Travel-Planner

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_LOG.md  README.md  TEST_LOG.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  geo.py  places.py  router.py  trips.py
backend/app/core/: config.py  database.py  security.py
backend/app/geo/: amap_geo_service.py
backend/app/models/: __init__.py  place.py  trip.py  user.py
backend/app/schemas/: api.py
backend/tests/: conftest.py  test_smoke.py
docs/plans/: 2026-07-20-frontend-experience-redesign-implementation.md  2026-07-20-frontend-experience-redesign.md
frontend/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/trips/: page.tsx
frontend/src/app/trips/[tripId]/: page.tsx
frontend/src/components/map/: MapCanvas.test.tsx  MapCanvas.tsx  map-types.ts
frontend/src/components/planner/: MobileWorkspaceNav.test.tsx  MobileWorkspaceNav.tsx  PlaceSearchPanel.test.tsx  PlaceSearchPanel.tsx  RoutePanel.test.tsx  RoutePanel.tsx  TripHeader.test.tsx  TripHeader.tsx  TripSettingsDrawer.test.tsx  TripSettingsDrawer.tsx
frontend/src/lib/: api-client.ts  planner-view.test.ts  planner-view.ts  tag-library.ts  types.ts
frontend/src/stores/: map-editor-store.ts
