[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "travel-planner-api"
version = "0.1.0"
description = "Travel Planner backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "email-validator>=2.2,<3.0",
  "pyjwt>=2.9,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "httpx>=0.27,<1.0",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
